# faceLock

./: .gitignore  README.md  install.sh  module1.md  pyproject.toml  roadmap.md
packaging/: owllock.desktop  owllock.service
scripts/: auth-prompt.py  install_desktop.py  owllock-ctl.py  owllock-launcher.sh
src/: __init__.py
src/facelock/: app.py
src/facelock/auth/: camera.py  detector.py  display_env.py  encoder.py  guardian.py  launch_auth.py  service.py  storage.py  system_auth.py
src/facelock/database/: __init__.py  db.py  models.py
src/facelock/gui/: __init__.py  face_enrollment.py  main_window.py  theme.py
src/facelock/services/: app_scanner.py
tests/: conftest.py  test_camera.py  test_detector.py  test_encoder.py  test_gui_smoke.py  test_storage.py
