[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facelock"
version = "0.1.0"
description = "Linux face-auth app locker"
requires-python = ">=3.14"
dependencies = [
	"numpy",
	"PyQt6",
	"opencv-python",
	"face-recognition",
]

[project.scripts]
facelock = "src.facelock.app:main"

