[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owllock"
version = "0.1.0"
description = "Linux face-auth app locker"
requires-python = ">=3.10"
dependencies = [
	"numpy",
	"PyQt6",
	"opencv-python",
	"face-recognition",
]

[project.scripts]
owllock = "src.facelock.app:main"

